fixing alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,6 +514,9 @@ p {
 .shrink-0 {
   flex-shrink: 0;
 }
+.grow {
+  flex-grow: 1;
+}
 .columns-3 {
   -moz-columns: 3;
        columns: 3;
@@ -546,6 +549,9 @@ p {
 .justify-between {
   justify-content: space-between;
 }
+.justify-items-end {
+  justify-items: end;
+}
 .gap-2 {
   gap: 0.5rem;
 }
@@ -554,6 +560,9 @@ p {
 }
 .gap-8 {
   gap: 2rem;
+}
+.self-end {
+  align-self: flex-end;
 }
 .self-center {
   align-self: center;
